:bug: Profit + buyDate + taxe on profit

--- a/templates/sale/includes/_items.html.twig
+++ b/templates/sale/includes/_items.html.twig
@@ -100,7 +100,7 @@
     </div>
 
     <div class="wrapper wrapper-orange flex justify-between items-center text-white font-semibold">
-        <h2 class="text-sm uppercase">Profit en attente :</h2>
+        <h2 class="text-sm uppercase">Total ventes en attente :</h2>
 
         <div class="flex items-center">
             <p class="text-lg">
