:bug: Title on hero page

--- a/templates/hero/index.html.twig
+++ b/templates/hero/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HeroController!{% endblock %}
+{% block title %}Nos héros | {{ parent() }}{% endblock %}
 
 {% block body %}
     <h1 class="text-center">Nos héros</h1>
