--- a/templates/price/show.html.twig
+++ b/templates/price/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <main class="grid gap-4">
         <div class="flex justify-center">
-            <a class="form-submit" href="{{ path('app_price_new') }}">Ajouter moniteur</a>
+            <a class="form-submit" href="{{ path('app_price_new', {'resourceId': priceDetails[0].Resource.id}) }}">Ajouter moniteur</a>
         </div>
         <div class="grid gap-4">
             <section class="wrapper wrapper-style flex justify-between">
