:sparkles: Stock on sales added

--- a/templates/sale/includes/_form.html.twig
+++ b/templates/sale/includes/_form.html.twig
@@ -7,6 +7,7 @@
     {{ form_row(form.sellPrice) }}
     {{ form_row(form.buyDate) }}
     {{ form_row(form.sellDate) }}
+    {{ form_row(form.stock) }}
     {{ form_row(form.isSell) }}
     <div class="lg:col-span-2">
         {{ form_widget(form.submit) }}
