--- a/templates/sale/index.html.twig
+++ b/templates/sale/index.html.twig
@@ -95,6 +95,16 @@
                     </div>
                 </th>
 
+                <th scope="col" class="triable p-2 hidden xl:table-cell" data-column="5" data-type="number">
+                    <div class="flex justify-between items-center">
+                        <div>
+                            <span class="hidden sm:block text-xs">Quantité </span>
+                            <span class="text-primary-400 text-xs md:text-lg mt-1 drop-shadow-2xl family">Stock</span>
+                        </div>
+                        <i class="triable-icon text-gray-300 hover:text-gray-400 dark:text-gray-600 dark:hover:text-gray-500" data-feather="filter"></i>
+                    </div>
+                </th>
+
                 <th scope="col" class="triable p-2" data-column="6" data-type="string">
                     <div class="flex justify-between items-center">
                         <div>
@@ -127,6 +137,7 @@
                     <td class="p-2 hidden xl:table-cell">{{ sale.sellDate ? sale.sellDate|date('d-m-Y') : 'Non vendu' }}</td>
                     <td class="p-2 hidden xl:table-cell">{{ sale.buyPrice|number_format(0, '.', ' ') }} k</td>
                     <td class="p-2 hidden xl:table-cell">{{ sale.sellPrice|number_format(0, '.', ' ') }} k</td>
+                    <td class="p-2 hidden xl:table-cell">{{ sale.stock }}</td>
                     <td class="p-2 {{ sale.isSell ? 'text-green-500' : 'text-red-500' }}">{{ sale.isSell? 'OUI' : 'NON' }}</td>
                     <td class="p-2 table-cell">
                         <div class="flex items-center">
