--- a/templates/guild/includes/_content.html.twig
+++ b/templates/guild/includes/_content.html.twig
@@ -1,5 +1,6 @@
 <div class="p-4 grid gap-2">
     <h3 class="text-center dark:text-orange-500">{{ guild.name }}</h3>
+    <p class="text-sm text-center">{{ guild.description }}</p>
     <div class="flex justify-between">
         <div class="flex items-center">
             <i class="w-4 mr-2 text-primary-500" data-feather="server"></i>
