🔥 Remove twitter concours

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1 class="text-center">Bienvenue sur Monifus</h1>
 
-    <section class="wrapper wrapper-style grid gap-6">
+    {#<section class="wrapper wrapper-style grid gap-6">
         <h2 class="text-center animation-text-color">Concours !</h2>
         <div class="flex items-center justify-center text-xs">
             <span>Temps restant :</span>
@@ -35,7 +35,7 @@
             <p>Pour ça rien de plus simple :</p>
             <a class="form-submit form-submit-green" href="{{ path('app_guilds_new') }}">Cliquez ici !</a>
         </div>
-    </section>
+    </section>#}
 
     {{ include('home/includes/_about.html.twig') }}
 
