--- a/templates/sale/index.html.twig
+++ b/templates/sale/index.html.twig
@@ -14,7 +14,7 @@
             <a class="form-submit form-submit-green" href="{{ path('app_sale_new') }}">Nouvelle vente</a>
             <button class="form-submit" id="show-sold">Afficher les vendus</button>
             <button class="form-submit" id="show-unsold">Afficher les non vendus</button>
-            <a class="form-submit form-submit-youtube" href="{{ path('app_sale') }}">Réinitialiser</a>
+            <button class="form-submit form-submit-youtube" id="show-all">Réinitialiser</button>
         </div>
     </section>
 
