--- a/templates/sale/includes/_items.html.twig
+++ b/templates/sale/includes/_items.html.twig
@@ -1,4 +1,4 @@
-<section class="grid gap-4 lg:grid-cols-2 lg:gap-6 2xl:grid-cols-4">
+<section class="grid gap-2 lg:grid-cols-2 2xl:grid-cols-4">
     <div class="wrapper wrapper-green flex justify-between items-center text-white font-semibold">
         <h2 class="text-sm uppercase">Investi :</h2>
 
