--- a/templates/home/includes/_record.html.twig
+++ b/templates/home/includes/_record.html.twig
@@ -1,7 +1,7 @@
 <section class="wrapper wrapper-style grid gap-6">  
     <div class="grid max-w-screen-xl gap-4 mx-auto w-full">
         <h2 class="text-center">Dernier record :</h2>
-        <h3 class="text-center">{{ record.monster.name }} <span class="text-white">par</span> <strong>{{ record.user.pseudonymeWebsite }}</strong></h3>
+        <h3 class="text-center">{{ record.monster.name }} <span class="text-gray-900 dark:text-white">par</span> <strong>{{ record.user.pseudonymeWebsite }}</strong></h3>
         <p class="text-center">Temps : <strong class="text-primary-500">{{ record.time|date('H:i:s') }}</strong></p>
         <div class="flex mx-auto space-x-2">
             <a class="form-submit" href="{{ path('app_monster_show', {'id': record.monster.id}) }}">Voir le record</a>
