--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -43,7 +43,7 @@
                 <span class="nav-item-text group-hover:block">Me Soutenir</span>
             </a>
             {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path("app_admin") }}" class="nav-item group/icon">
+                <a href="#" class="nav-item group/icon">
                     <i data-feather="lock" class="nav-item-icon"></i>
                     <span class="nav-item-text group-hover:block">Admin</span>
                 </a>
